--- a/000PythonSnippet.ipynb
+++ b/000PythonSnippet.ipynb
@@ -2564,6 +2564,9 @@
     "df.sort_values(by='new', ascending=False)\n",
     "# Note: sort_values, instead of sort_value.\n",
     "# Note: 'by=['col1']' vs list.sort(key=lambda x: x[1])\n",
+    "# Note: 'reverse' in python vs 'ascending' in Pandas \n",
+    "# 'key', 'reverse' are languages of coding\n",
+    "# 'sort_values', 'ascending' are languages of Excel\n",
     "# Sort dataframe by multiple columns\n",
     "# df = df.sort_values(by=['col1','col2','col3'],ascending=[1,1,0])\n",
     "\n",
