--- a/000PythonSnippet.ipynb
+++ b/000PythonSnippet.ipynb
@@ -218,31 +218,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[18, 9, 24, 12, 27]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Lambda function\n",
-    "# Lambda function is a way of creating anonymous functions at runtime.\n",
-    "\n",
-    "foo = [2, 18, 9, 22, 17, 24, 8, 12, 27]\n",
-    "#The filter() function in Python takes in a function and a list as arguments.\n",
-    "bar = list(filter(lambda x: x % 3 == 0, foo))\n",
-    "print (bar)\n",
-    "#print map(lambda x: x * 2 + 10, foo)\n",
-    "#print reduce(lambda x, y: x + y, foo)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "I am good.\n",
       "0.0003862120001940639\n",
       "\n",
@@ -449,6 +424,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Max Float\n",
+    "\n",
+    "a1 = float('-inf')\n",
+    "a2 = float('inf')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -539,12 +528,13 @@
     }
    ],
    "source": [
-    "# Reverse a dictionary key values\n",
+    "# Reverse a dictionary's key:value\n",
     "\n",
     "my_map = {'a':1, 'b':2, 'c':3}\n",
     "print (my_map)\n",
     "inv_map = {v: k for k, v in my_map.items()}\n",
     "print (inv_map)\n",
+    "\n",
     "# Note: dict.keys(), dict.values(), dict.items()"
    ]
   },
@@ -697,6 +687,7 @@
     "a = [1,2,3,4,5]\n",
     "print (a[:3])\n",
     "print (a[3:])\n",
+    "\n",
     "# Note: a[:i] only print 0,...,i-1 elements\n",
     "#       a[i:] print i,..., to end elements"
    ]
@@ -839,6 +830,7 @@
     "a = [1,3,2,4]\n",
     "a.sort()\n",
     "print (a)\n",
+    "\n",
     "a.sort(reverse=True)\n",
     "print (a)\n",
     "\n",
@@ -846,6 +838,7 @@
     "#data = [(1,2,3), (9,5,6), (7,8,9)]\n",
     "b.sort(key=lambda x: x[2], reverse=True)\n",
     "print (b)\n",
+    "\n",
     "# Note: using 'key=lambda x: x[2]'\n",
     "# Note: using a lambda function\n",
     "# Note: 'reverse' in python vs 'ascending' in Pandas \n",
@@ -941,8 +934,10 @@
     "\n",
     "x = [1, 2, 3]\n",
     "print ('x+[4,5] is:', x+[4,5])\n",
+    "\n",
     "x.append([4,5])\n",
     "print ('x.append([4,5]) is:', x)\n",
+    "\n",
     "y = [1,2,3]\n",
     "y.extend([4,5])\n",
     "print ('y.extend([4,5]) is:', y)"
@@ -964,6 +959,9 @@
     }
    ],
    "source": [
+    "# Lambda function\n",
+    "# Lambda function is a way of creating anonymous functions at runtime.\n",
+    "\n",
     "# map, filter\n",
     "# lambda, comprehension\n",
     "# map(aFunction, aSequence) \n",
@@ -972,7 +970,9 @@
     "items = [1,2,3,4,5]\n",
     "print (list(map((lambda x: x **2), items)))\n",
     "print (list(map(pow,[2, 3, 4], [5, 6, 7])))  # as pow(x, n) takes in two arguments\n",
-    "print (list(filter((lambda x: x < 0), range(-5,5))))"
+    "print (list(filter((lambda x: x < 0), range(-5,5))))\n",
+    "\n",
+    "# Note the 'list()' wrapping 'filter()' or 'map()'"
    ]
   },
   {
@@ -1034,7 +1034,6 @@
     "        temp = result\n",
     "    result.append(i)\n",
     "    print (i, temp, result)\n",
-    "    \n",
     "\n",
     "# Not using assignment\n",
     "# 'result' change, 'temp' not affected.\n",
@@ -1560,6 +1559,7 @@
      "text": [
       "Counter({'b': 2, 'a': 1})\n",
       "Counter({'c': 2, 'a': 1})\n",
+      "Counter({'a': 2, 'c': 2})\n",
       "c.get('w') None\n",
       "c.get('w',0) 0\n"
      ]
@@ -1570,10 +1570,13 @@
     "\n",
     "c = Counter('aabbcc')\n",
     "d = Counter('abb')\n",
-    "print c&d\n",
-    "print c-d\n",
-    "print 'c.get(\\'w\\')',c.get('w')\n",
-    "print 'c.get(\\'w\\',0)', c.get('w',0)"
+    "e = Counter('bbee')\n",
+    "\n",
+    "print (c&d)\n",
+    "print (c-d)\n",
+    "print (c-e)\n",
+    "print ('c.get(\\'w\\')',c.get('w'))\n",
+    "print ('c.get(\\'w\\',0)', c.get('w',0))"
    ]
   },
   {
@@ -2479,8 +2482,7 @@
     "# Create DataFrame From Dictionary.\n",
     "# Python 3.X.\n",
     "df = pd.DataFrame(list(data.items()), columns=['Date', 'DateValue'])\n",
-    "df['Date'] = pd.to_datetime(df['Date'])\n",
-    "\n",
+    "df['Date'] = pd.to_datetime(df['Date'], infer_datetime_format=True)\n",
     "\n",
     "# Create DataFrame From dict of ndarrays / lists\n",
     "\n",
@@ -2686,6 +2688,7 @@
     "test = pd.DataFrame([4,5,6], columns=['first'])\n",
     "test['color']=pd.DataFrame(['Red','Green','Blue'])\n",
     "print (\"Before: \", test)\n",
+    "\n",
     "di = {'Red':1, 'Green':2, 'Blue':3}\n",
     "test['ordinal'] = test['color'].map(lambda x: di[x])\n",
     "print (\"After: \", test)"
