Notes about search and findall

--- a/000PythonSnippet.ipynb
+++ b/000PythonSnippet.ipynb
@@ -2886,7 +2886,16 @@
     "    match(), checks for a match only at the beginning of the string.\n",
     "    search(), searches for first occurrence of RE pattern within string. \n",
     "    \n",
-    "    re.findall(pattern, string), returns a list of strings"
+    "    re.findall(pattern, string), returns a list of strings\n",
+    "\n",
+    "## re.search(r'Pattern')\n",
+    "     Need to use '()' in the Pattern\n",
+    "     re.search() returns a match object\n",
+    "     Need to use g = re.search(r'Pattern', string), g.group(1), ..., g.group(n) to get the matched pattern\n",
+    "     \n",
+    "## re.findall(r'Pattern')\n",
+    "     Do not need to use '()' in the Pattern\n",
+    "     re.findall() returns a list"
    ]
   },
   {
