Add re.search and re.findall

--- a/000PythonSnippet.ipynb
+++ b/000PythonSnippet.ipynb
@@ -2895,7 +2895,8 @@
     "     \n",
     "## re.findall(r'Pattern')\n",
     "     Do not need to use '()' in the Pattern\n",
-    "     re.findall() returns a list"
+    "     re.findall() returns a list\n",
+    "     if using '()' in Pattern, then re.findall() returns a list of tuples."
    ]
   },
   {
@@ -2914,7 +2915,8 @@
       "abc\n",
       "['abc', 'cba']\n",
       "abccba\n",
-      "['onday']\n"
+      "['onday']\n",
+      "Using () in re.findall():  [('abc', 'gmail,'), ('adg', 'gmail,'), ('jbh', 'gmail')]\n"
      ]
     }
    ],
@@ -2923,8 +2925,9 @@
     "\n",
     "### NOTE ###\n",
     "# 1, 2, ... in group() corresponding to patterns in '()'.\n",
-    "# Pay attention to '()' in pattern.\n",
-    "# Without '()' only use group(0)\n",
+    "# Need to use '()' in re.search().\n",
+    "# group(0) is the whole match\n",
+    "# group(1), ..., are the matches in ().\n",
     "\n",
     "m = re.search(r'([a-zA-Z]+) ([a-zA-Z]+)', '1990 Isaac Newton, physicist')\n",
     "# group(0), the entire match\n",
@@ -2951,7 +2954,11 @@
     "\n",
     "# m copies of the previous RE\n",
     "match = re.findall(r'[a-z]{5}', 'It is a good Monday.')\n",
-    "print (match)"
+    "print (match)\n",
+    "\n",
+    "# Using '()' in re.findall()\n",
+    "match = re.findall(r'(\\S+)@(\\S+)', 'abc@gmail, adg@gmail, jbh@gmail')\n",
+    "print('Using () in re.findall(): ', match)"
    ]
   },
   {
