--- a/000PythonSnippet.ipynb
+++ b/000PythonSnippet.ipynb
@@ -185,7 +185,8 @@
       "Sort by sorted(): [1, 2, 3, 4, 5, 6]\n",
       "[6, 5, 4, 3, 2, 1]\n",
       "Sort by np.sort(): [1 2 3 4 5 6]\n",
-      "[(5, 1), (3, 2), (1, 3)]\n",
+      "[(5, 1), (3, 2), (3, 5), (1, 3)]\n",
+      "[(5, 1), (3, 5), (3, 2), (1, 3)]\n",
       "[('a', 1), ('c', 2), ('b', 3)]\n"
      ]
     }
@@ -201,8 +202,13 @@
     "import numpy as np\n",
     "print ('Sort by np.sort():', np.sort(a))\n",
     "\n",
-    "b =[(1,3),(5,1),(3,2)]\n",
+    "b =[(1,3),(5,1),(3,2),(3,5)]\n",
     "b.sort(key=lambda x: x[0],reverse=True)\n",
+    "print (b)\n",
+    "\n",
+    "# Sort by two keys\n",
+    "b =[(1,3),(5,1),(3,2),(3,5)]\n",
+    "b.sort(key=lambda x: (x[0], x[1]),reverse=True)\n",
     "print (b)\n",
     "\n",
     "c = {'a': 1, 'b': 3, 'c': 2}\n",
