Add new trick for Counter

--- a/000PythonSnippet.ipynb
+++ b/000PythonSnippet.ipynb
@@ -1555,6 +1555,50 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Counter()\n",
+    "\n",
+    "    c = Counter('AAABBBC')\n",
+    "    Use c.most_common(2) to get the first two ordered (key,value) pair.\n",
+    "    c.most_common(1), or c.most_common(2), or c.most_common() returns a list of (key, value) pairs.\n",
+    "    The keys in Counter is always sorted in the descending order of values.\n",
+    "    The keys' order is updated whenever the value of key is changed. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter key, value:  Counter({'A': 3, 'B': 3, 'C': 1})\n",
+      "The first key, value pair:  [('A', 3)]\n",
+      "Counter key, value:  Counter({'B': 3, 'A': 2, 'C': 1})\n",
+      "The first key, value pair:  [('B', 3)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "\n",
+    "c = Counter('AAABBBC')\n",
+    "# The keys of Counter is sorted by the value.\n",
+    "print(\"Counter key, value: \", c)\n",
+    "print (\"The first key, value pair: \",c.most_common(1))\n",
+    "# Note: c.most_common(1) returns a list of (key, value) pair.\n",
+    "\n",
+    "# The key order is updated whenever the value of key changes.\n",
+    "c['A'] = c['A'] - 1\n",
+    "print(\"Counter key, value: \", c)\n",
+    "print (\"The first key, value pair: \",c.most_common(1))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
