--- a/000PythonSnippet.ipynb
+++ b/000PythonSnippet.ipynb
@@ -505,6 +505,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[('c', 3), ('b', 1), ('a', 5)]\n",
+      "[('a', 5), ('c', 3), ('b', 1)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Sort a dictionary.\n",
+    "d = {'a':5, 'b':1, 'c':3}\n",
+    "\n",
+    "# Sort by key.\n",
+    "print (sorted(d.items(), key=lambda x: x[0], reverse=True))\n",
+    "\n",
+    "# Sort by value.\n",
+    "print (sorted(d.items(), key=lambda x: x[1], reverse=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Befor pop, d is: {'a': 1, 'b': 2, 'c': 3}\n",
       "After pop, d is: {'b': 2, 'c': 3}\n"
      ]
