--- a/000PythonSnippet.ipynb
+++ b/000PythonSnippet.ipynb
@@ -187,6 +187,7 @@
       "Sort by np.sort(): [1 2 3 4 5 6]\n",
       "[(5, 1), (3, 2), (3, 5), (1, 3)]\n",
       "[(5, 1), (3, 5), (3, 2), (1, 3)]\n",
+      "[(1, 3), (3, 5), (3, 2), (5, 1)]\n",
       "[('a', 1), ('c', 2), ('b', 3)]\n"
      ]
     }
@@ -207,10 +208,16 @@
     "print (b)\n",
     "\n",
     "# Sort by two keys\n",
+    "# Pay attention to the '()'.\n",
     "b =[(1,3),(5,1),(3,2),(3,5)]\n",
     "b.sort(key=lambda x: (x[0], x[1]),reverse=True)\n",
     "print (b)\n",
     "\n",
+    "# Sort by two keys and reverse for the second.\n",
+    "b.sort(key=lambda x: (x[0], -1*x[1]))\n",
+    "print(b)\n",
+    "\n",
+    "# Sort the dictionary items().\n",
     "c = {'a': 1, 'b': 3, 'c': 2}\n",
     "print(sorted(c.items(), key=lambda x: x[1], reverse=False))"
    ]
