adding np.random functions

--- a/000PythonSnippet.ipynb
+++ b/000PythonSnippet.ipynb
@@ -174,6 +174,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sort, List Sort, Sorted"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -210,7 +217,7 @@
     "# Sort by two keys\n",
     "# Pay attention to the '()'.\n",
     "b =[(1,3),(5,1),(3,2),(3,5)]\n",
-    "b.sort(key=lambda x: (x[0], x[1]),reverse=True)\n",
+    "b.sort(key=lambda x: (x[0], x[1]), reverse=True)\n",
     "print (b)\n",
     "\n",
     "# Sort by two keys and reverse for the second.\n",
@@ -677,7 +684,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# List List Operations"
+    "# Numpy.Random\n",
+    "\n",
+    "    np.random.random(): [0,1) uniform distribution\n",
+    "    np.random.randint(low, high, size): random integer in range [low, high)\n",
+    "    np.random.randn(): standard normal distribution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# List, List Operations"
    ]
   },
   {
@@ -2978,7 +2996,10 @@
     "## re.findall(r'Pattern')\n",
     "     Do not need to use '()' in the Pattern\n",
     "     re.findall() returns a list\n",
-    "     if using '()' in Pattern, then re.findall() returns a list of tuples."
+    "     if using two or more '()' in Pattern, then re.findall() returns a list of tuples.\n",
+    "     \n",
+    "## re.split(':', string)\n",
+    "     Returns a list."
    ]
   },
   {
@@ -3086,9 +3107,10 @@
    ],
    "source": [
     "# split string\n",
+    "import re\n",
     "\n",
-    "s = \"dog cat cat dog\"\n",
-    "print (s.split(' '))\n",
+    "s = \"dog:cat:cat:dog\"\n",
+    "print (re.split(':', s))\n",
     "\n",
     "s1 = 'abba'\n",
     "print ([i for i in s1])"
