--- a/000PythonSnippet.ipynb
+++ b/000PythonSnippet.ipynb
@@ -707,6 +707,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "1 a\n"
+     ]
+    }
+   ],
+   "source": [
+    "# List can be mixed types.\n",
+    "a = [1, 'a', 4, '*']\n",
+    "print(a[0], a[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Before Shuttle: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
       "After Shuttle: [8, 7, 0, 4, 3, 5, 6, 1, 2, 9]\n"
      ]
