Set of strings in strings

--- a/000PythonSnippet.ipynb
+++ b/000PythonSnippet.ipynb
@@ -3099,6 +3099,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "'abc' is in  abcdef\n",
+      "'abd' is not in  abcdef\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Set of strings in strings.\n",
+    "a = 'abcdef'\n",
+    "if 'abc' in a:\n",
+    "    print(\"'abc' is in \",a)\n",
+    "if 'abd' in a:\n",
+    "    print(\"'abd' is in \",a)\n",
+    "else:\n",
+    "    print(\"'abd' is not in \",a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "it is a capital one.\n"
      ]
     }
