--- a/000PythonSnippet.ipynb
+++ b/000PythonSnippet.ipynb
@@ -2767,6 +2767,96 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>ANew</th>\n",
+       "      <th>BNew</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   A  B  ANew  BNew\n",
+       "0  1  2  -1.0  -2.0\n",
+       "1  2  3   0.0   0.0\n",
+       "2  3  4   3.0   4.0"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# DataFrame map multiple columns with argument\n",
+    "import pandas as pd\n",
+    "\n",
+    "def scaleScore(x1, x2, avg):\n",
+    "    \n",
+    "    return x1 * (x2 - avg)\n",
+    "\n",
+    "t_d = {'A': [1,2,3], 'B': [2,3,4]}\n",
+    "t_df = pd.DataFrame(t_d)\n",
+    "t_mean = {}\n",
+    "for i in ['A','B']:\n",
+    "    t_mean[i] = t_df[i].mean()\n",
+    "\n",
+    "for i in ['A','B']:\n",
+    "    t_df[i + 'New'] = t_df[[i]].apply(lambda x: scaleScore(x1 = x, x2 = x, avg = t_mean[i]), axis = 1)\n",
+    "\n",
+    "t_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
