Only missing rows

--- a/000PythonSnippet.ipynb
+++ b/000PythonSnippet.ipynb
@@ -2608,6 +2608,10 @@
     "d1 = {'one' : [1., 2., 3., 4.], 'two' : ['4', '3', '2', '1']}\n",
     "df1 = pd.DataFrame(d1)\n",
     "\n",
+    "# Select only rows with missing values.\n",
+    "\n",
+    "null_data = df[df.isnull().any(axis=1)]\n",
+    "\n",
     "# Check column types\n",
     "\n",
     "df1.dtypes\n",
