--- a/000PythonSnippet.ipynb
+++ b/000PythonSnippet.ipynb
@@ -177,6 +177,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### lambda function multiple variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "fitfunc  = lambda mu, sigma, x: 1/(np.sqrt(2*3.14)*sigma)*np.exp(-0.5*((x-mu)/sigma)**2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Sort, List Sort, Sorted"
    ]
   },
@@ -2796,8 +2814,7 @@
        "      <th></th>\n",
        "      <th>A</th>\n",
        "      <th>B</th>\n",
-       "      <th>ANew</th>\n",
-       "      <th>BNew</th>\n",
+       "      <th>New</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -2806,13 +2823,11 @@
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>-1.0</td>\n",
-       "      <td>-2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
        "      <td>3</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2820,17 +2835,16 @@
        "      <td>3</td>\n",
        "      <td>4</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>4.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   A  B  ANew  BNew\n",
-       "0  1  2  -1.0  -2.0\n",
-       "1  2  3   0.0   0.0\n",
-       "2  3  4   3.0   4.0"
+       "   A  B  New\n",
+       "0  1  2 -1.0\n",
+       "1  2  3  0.0\n",
+       "2  3  4  3.0"
       ]
      },
      "execution_count": 1,
@@ -2848,12 +2862,10 @@
     "\n",
     "t_d = {'A': [1,2,3], 'B': [2,3,4]}\n",
     "t_df = pd.DataFrame(t_d)\n",
-    "t_mean = {}\n",
-    "for i in ['A','B']:\n",
-    "    t_mean[i] = t_df[i].mean()\n",
     "\n",
-    "for i in ['A','B']:\n",
-    "    t_df[i + 'New'] = t_df[[i]].apply(lambda x: scaleScore(x1 = x, x2 = x, avg = t_mean[i]), axis = 1)\n",
+    "t_mean = t_df['B'].mean()\n",
+    "\n",
+    "t_df['New'] = t_df[['A', 'B']].apply(lambda x: scaleScore(x1 = x[0], x2 = x[1], avg = t_mean), axis = 1)\n",
     "\n",
     "t_df"
    ]
@@ -3660,7 +3672,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
