--- a/000PythonSnippet.ipynb
+++ b/000PythonSnippet.ipynb
@@ -213,7 +213,8 @@
       "[(5, 1), (3, 2), (3, 5), (1, 3)]\n",
       "[(5, 1), (3, 5), (3, 2), (1, 3)]\n",
       "[(1, 3), (3, 5), (3, 2), (5, 1)]\n",
-      "[('a', 1), ('c', 2), ('b', 3)]\n"
+      "[('a', 1), ('c', 2), ('b', 3)]\n",
+      "[232, 21, 122, 12]\n"
      ]
     }
    ],
@@ -244,7 +245,13 @@
     "\n",
     "# Sort the dictionary items().\n",
     "c = {'a': 1, 'b': 3, 'c': 2}\n",
-    "print(sorted(c.items(), key=lambda x: x[1], reverse=False))"
+    "print(sorted(c.items(), key=lambda x: x[1], reverse=False))\n",
+    "\n",
+    "from functools import cmp_to_key\n",
+    "l = [12,21,122,232]\n",
+    "# Sort l if str(x) + str(y) > str(y) + str(x) then x first.\n",
+    "l.sort(key=cmp_to_key(lambda x, y: -1 if str(x) + str(y) > str(y) + str(x) else 1))\n",
+    "print(l)"
    ]
   },
   {
