add sort cmp_to_key

--- a/000PythonSnippet.ipynb
+++ b/000PythonSnippet.ipynb
@@ -250,6 +250,8 @@
     "from functools import cmp_to_key\n",
     "l = [12,21,122,232]\n",
     "# Sort l if str(x) + str(y) > str(y) + str(x) then x first.\n",
+    "# 'key' accept one argument. \n",
+    "# 'cmp_to_key' accept two arguments and convert to one argument.\n",
     "l.sort(key=cmp_to_key(lambda x, y: -1 if str(x) + str(y) > str(y) + str(x) else 1))\n",
     "print(l)"
    ]
