--- a/000PythonSnippet.ipynb
+++ b/000PythonSnippet.ipynb
@@ -640,6 +640,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "{'a': 1, 'b': 2, 'c': 3}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Dictionary Extension\n",
+    "d1 = {'a':1, 'b':2}\n",
+    "d2 = {'c':3}\n",
+    "d1.update(d2)\n",
+    "print(d1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Counter a is: Counter({'l': 3, 'o': 2, 'H': 1, 'e': 1, ' ': 1, 'W': 1, 'r': 1, 'd': 1, '!': 1}).\n",
       "Counter a equals Counter b.\n"
      ]
