--- a/000PythonSnippet.ipynb
+++ b/000PythonSnippet.ipynb
@@ -852,6 +852,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[1, 2, -2, 3, 4, 5]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# List Insertion and Removal\n",
+    "# List insertion is O(n)\n",
+    "a = [1,2,3,4,5]\n",
+    "a.insert(2, -2)\n",
+    "print(a)\n",
+    "a.pop(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "[1, 3, 6]\n"
      ]
     }
@@ -3081,6 +3113,74 @@
     "df = pd.DataFrame(a)\n",
     "df.var()\n",
     "# df.mean(), df.sum(), df.median(), df.std()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ST_NAME</th>\n",
+       "      <th>value</th>\n",
+       "      <th>value2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Oregon</td>\n",
+       "      <td>4.685</td>\n",
+       "      <td>6.218</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Nebraska</td>\n",
+       "      <td>2.491</td>\n",
+       "      <td>0.001</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    ST_NAME  value  value2\n",
+       "0    Oregon  4.685   6.218\n",
+       "1  Nebraska  2.491   0.001"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Dataframe join, Dataframe merge\n",
+    "# User pandas.merge(left, right, left_on='key1', right_one='key2')\n",
+    "import pandas\n",
+    "left = pandas.DataFrame({'ST_NAME': ['Oregon', 'Nebraska'], 'value': [4.685, 2.491]})\n",
+    "right = pandas.DataFrame({'ST_NAME': ['Oregon', 'Nebraska'], 'value2': [6.218, 0.001]})\n",
+    "pandas.merge(left, right)"
    ]
   },
   {
