--- a/000PythonSnippet.ipynb
+++ b/000PythonSnippet.ipynb
@@ -454,7 +454,8 @@
      "output_type": "stream",
      "text": [
       "Python 3 Max integer is  9223372036854775807\n",
-      "True\n"
+      "True\n",
+      "inf\n"
      ]
     }
    ],
@@ -466,8 +467,12 @@
     "# Python NAN\n",
     "# Note: can not use \"==\" for two NAN\n",
     "import math\n",
-    "x=float('nan')\n",
-    "print (math.isnan(x))"
+    "x = float('nan')\n",
+    "print (math.isnan(x))\n",
+    "\n",
+    "# inf\n",
+    "x = float('inf')\n",
+    "print(x)"
    ]
   },
   {
