--- a/000PythonSnippet.ipynb
+++ b/000PythonSnippet.ipynb
@@ -658,6 +658,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Comparison \"==\""
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
