--- a/000PythonSnippet.ipynb
+++ b/000PythonSnippet.ipynb
@@ -2770,6 +2770,7 @@
     "# Check Duplicate\n",
     "\n",
     "df.duplicated()\n",
+    "df.duplicated(subset=['column1'])\n",
     "df.drop_duplicates(inplace=True)\n",
     "\n",
     "# Adding new column by mapping\n",
