flatten list of lists

--- a/000PythonSnippet.ipynb
+++ b/000PythonSnippet.ipynb
@@ -1040,14 +1040,11 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 0, 0, 1, 1, 1, 0, 0, 1, 0, 0, 1, 1, 0, 0]\n"
+     ]
     }
    ],
    "source": [
@@ -1055,7 +1052,10 @@
     "# Using l[i][j] instead of l[i,j]\n",
     "\n",
     "l = [[0,1,0,0],  [1,1,1,0],  [0,1,0,0],  [1,1,0,0]]\n",
-    "l[1][1]"
+    "l[1][1]\n",
+    "\n",
+    "# Flatten out.\n",
+    "print([i for sublist in l for i in sublist])"
    ]
   },
   {
