--- a/000PythonSnippet.ipynb
+++ b/000PythonSnippet.ipynb
@@ -896,6 +896,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "2\n",
+      "[1, 3, 4, 5, 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# maintaining a list in sorted order without having to sort the list after each insertion\n",
+    "# Bisect\n",
+    "import bisect\n",
+    "l = [1,3,5,7]\n",
+    "print(bisect.bisect(l, 4))\n",
+    "bisect.insort(l, 4)\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "[1, 3, 6]\n"
      ]
     }
