--- a/000PythonSnippet.ipynb
+++ b/000PythonSnippet.ipynb
@@ -896,8 +896,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n",
-      "[1, 3, 4, 5, 7]\n"
+      "3\n",
+      "1\n",
+      "[1, 3, 3, 3, 5, 7]\n"
      ]
     }
    ],
@@ -905,9 +906,10 @@
     "# maintaining a list in sorted order without having to sort the list after each insertion\n",
     "# Bisect\n",
     "import bisect\n",
-    "l = [1,3,5,7]\n",
-    "print(bisect.bisect(l, 4))\n",
-    "bisect.insort(l, 4)\n",
+    "l = [1,3,3,5,7]\n",
+    "print(bisect.bisect(l, 3))\n",
+    "print(bisect.bisect_left(l, 3))\n",
+    "bisect.insort(l, 3)\n",
     "print(l)"
    ]
   },
