--- a/000PythonSnippet.ipynb
+++ b/000PythonSnippet.ipynb
@@ -922,6 +922,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[5, 9, 15, 10, 12]\n",
+      "[9, 10, 15, 12]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# heapq\n",
+    "import heapq\n",
+    "l = [5,10,15]\n",
+    "heapq.heappush(l, 9)\n",
+    "heapq.heappush(l, 12)\n",
+    "print(l)\n",
+    "print(heapq.heappop(l))\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "[1, 3, 6]\n"
      ]
     }
@@ -1081,7 +1106,13 @@
     "l[1][1]\n",
     "\n",
     "# Flatten out.\n",
-    "print([i for sublist in l for i in sublist])"
+    "print([i for sublist in l for i in sublist])\n",
+    "\n",
+    "# Which means.\n",
+    "flatten_list = []\n",
+    "for sublist in l:\n",
+    "    for item in sublist:\n",
+    "        flat_list.append(item)"
    ]
   },
   {
@@ -2753,7 +2784,7 @@
     "# df.col.dt.month\n",
     "# df.col.dt.year\n",
     "\n",
-    "# Creat DataFrame From a list of dicts\n",
+    "# Create DataFrame From a list of dicts\n",
     "\n",
     "d2 = [{'a': 1, 'b': 2}, {'a': 5, 'b': 10, 'c': 20}]\n",
     "df2 = pd.DataFrame(d2)\n",
@@ -3216,9 +3247,10 @@
    "source": [
     "# Dataframe join, Dataframe merge\n",
     "# User pandas.merge(left, right, left_on='key1', right_one='key2')\n",
-    "import pandas\n",
-    "left = pandas.DataFrame({'ST_NAME': ['Oregon', 'Nebraska'], 'value': [4.685, 2.491]})\n",
-    "right = pandas.DataFrame({'ST_NAME': ['Oregon', 'Nebraska'], 'value2': [6.218, 0.001]})\n",
+    "\n",
+    "import pandas as pd\n",
+    "left = pd.DataFrame({'ST_NAME': ['Oregon', 'Nebraska'], 'value': [4.685, 2.491]})\n",
+    "right = pd.DataFrame({'ST_NAME': ['Oregon', 'Nebraska'], 'value2': [6.218, 0.001]})\n",
     "pandas.merge(left, right)"
    ]
   },
