--- a/000PythonSnippet.ipynb
+++ b/000PythonSnippet.ipynb
@@ -661,6 +661,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Tuple\n",
+    "\n",
+    "A tuple is a collection which is ordered and unchangeable."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('a', 'a', 'b', 'c', 'd', 'd', 'e')\n",
+      "dict_keys([('a', 'a', 'b', 'c', 'd', 'd', 'e')])\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = tuple(sorted('adabedc'))\n",
+    "print(t)\n",
+    "\n",
+    "# Tuple can be dictionary key.\n",
+    "d = {}\n",
+    "d[t] = 1\n",
+    "print(d.keys())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Comparison \"==\""
    ]
   },
