--- a/000PythonSnippet.ipynb
+++ b/000PythonSnippet.ipynb
@@ -3279,12 +3279,16 @@
    ],
    "source": [
     "# Dataframe join, Dataframe merge\n",
-    "# User pandas.merge(left, right, left_on='key1', right_one='key2')\n",
+    "# User pandas.merge(left, right, on=None, left_on='key1', right_on='key2')\n",
+    "# df1.join(df2), join default is on index.\n",
+    "# join uses merge under the hood.\n",
     "\n",
     "import pandas as pd\n",
     "left = pd.DataFrame({'ST_NAME': ['Oregon', 'Nebraska'], 'value': [4.685, 2.491]})\n",
     "right = pd.DataFrame({'ST_NAME': ['Oregon', 'Nebraska'], 'value2': [6.218, 0.001]})\n",
-    "pandas.merge(left, right)"
+    "\n",
+    "# If 'on' is not specified, it will join on the columns that appear in both dataframes.\n",
+    "pd.merge(left, right)"
    ]
   },
   {
