--- a/000PythonSnippet.ipynb
+++ b/000PythonSnippet.ipynb
@@ -2791,6 +2791,8 @@
     "df1 = pd.DataFrame(d1)\n",
     "\n",
     "# Select only rows with missing values.\n",
+    "# \"axis = 1\" is for column, it means giving out a column of results.\n",
+    "# For each true or false is for that row.\n",
     "\n",
     "null_data = df[df.isnull().any(axis=1)]\n",
     "\n",
