--- a/000PythonSnippet.ipynb
+++ b/000PythonSnippet.ipynb
@@ -2917,6 +2917,10 @@
     "df.loc[df['new'].notnull(), ['square']] = df['new']**2 / 2\n",
     "# Note: using '[]' instead of '()'\n",
     "\n",
+    "# iloc vs loc: iloc only accepts integer. \n",
+    "# iloc gets rows (or columns) at particular positions in the index\n",
+    "df.iloc[0]\n",
+    "\n",
     "# Add new column to DataFrame.\n",
     "# df.assign(columnname=Series/Scalar/Array)\n",
     "# Note: Need to assign again, otherwise it did not change the original one.\n",
