--- a/000PythonSnippet.ipynb
+++ b/000PythonSnippet.ipynb
@@ -2954,7 +2954,10 @@
     "#Note: columns, df.rename(columns={}, inplace=True)\n",
     "\n",
     "# DataFrame Tanspose\n",
-    "df.T"
+    "df.T\n",
+    "\n",
+    "# Delete DataFrame and Release Memory\n",
+    "del df"
    ]
   },
   {
