--- a/000PythonSnippet.ipynb
+++ b/000PythonSnippet.ipynb
@@ -2956,6 +2956,12 @@
     "# DataFrame Tanspose\n",
     "df.T\n",
     "\n",
+    "# Sum all columns for each row\n",
+    "df.sum(axis=1)\n",
+    "\n",
+    "# Sum all rows for each column\n",
+    "df.sum(axis=0)\n",
+    "\n",
     "# Delete DataFrame and Release Memory\n",
     "del df"
    ]
