--- a/000PythonSnippet.ipynb
+++ b/000PythonSnippet.ipynb
@@ -940,8 +940,14 @@
     "# Bisect\n",
     "import bisect\n",
     "l = [1,3,3,5,7]\n",
+    "\n",
+    "# bisect.bisect(list, int): locate the position to insert int (on the right)\n",
     "print(bisect.bisect(l, 3))\n",
+    "\n",
+    "# bisect_bisect_left(list, int): locate the position to insert int on the left\n",
     "print(bisect.bisect_left(l, 3))\n",
+    "\n",
+    "# bisect.insort(list, int): insert the int to list (right) to keep list sorted \n",
     "bisect.insort(l, 3)\n",
     "print(l)"
    ]
