--- a/000PythonSnippet.ipynb
+++ b/000PythonSnippet.ipynb
@@ -3265,32 +3265,29 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>ST_NAME</th>\n",
-       "      <th>value</th>\n",
-       "      <th>value2</th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Oregon</td>\n",
-       "      <td>4.685</td>\n",
-       "      <td>6.218</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Nebraska</td>\n",
-       "      <td>2.491</td>\n",
-       "      <td>0.001</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    ST_NAME  value  value2\n",
-       "0    Oregon  4.685   6.218\n",
-       "1  Nebraska  2.491   0.001"
+       "   A  B\n",
+       "0  1  2\n",
+       "1  2  3"
       ]
      },
      "execution_count": 1,
@@ -3309,7 +3306,15 @@
     "right = pd.DataFrame({'ST_NAME': ['Oregon', 'Nebraska'], 'value2': [6.218, 0.001]})\n",
     "\n",
     "# If 'on' is not specified, it will join on the columns that appear in both dataframes.\n",
-    "pd.merge(left, right)"
+    "pd.merge(left, right)\n",
+    "\n",
+    "# DataFrame Union\n",
+    "l1 = [{'A':1, 'B':2}]\n",
+    "l2 = [{'A':2, 'B':3}]\n",
+    "df1 = pd.DataFrame(l1)\n",
+    "df2 = pd.DataFrame(l2)\n",
+    "df3 = pd.concat([df1, df2]).reset_index().drop('index', axis=1)\n",
+    "df3"
    ]
   },
   {
