search vs match

--- a/000PythonSnippet.ipynb
+++ b/000PythonSnippet.ipynb
@@ -3371,9 +3371,13 @@
     "    re.search() and re.match() return a Match Object.\n",
     "    Match objects always have a boolean value of True. \n",
     "\n",
-    "    search() and match() both search for first occurrence.\n",
-    "    match(), checks for a match only at the beginning of the string.\n",
-    "    search(), searches for first occurrence of RE pattern within string. \n",
+    "    search() vs match():\n",
+    "    re.match()\n",
+    "      - Lazy, only try at the beginning of the string\n",
+    "      - Checks for a match only at the beginning of the string.\n",
+    "    re.search()\n",
+    "      - Exhaustive, look trough all the string to find a match\n",
+    "      - Searches for first occurrence of RE pattern within string. \n",
     "    \n",
     "    re.findall(pattern, string), returns a list of strings\n",
     "\n",
