Change year of datetime

--- a/000PythonSnippet.ipynb
+++ b/000PythonSnippet.ipynb
@@ -2791,6 +2791,13 @@
     "df = pd.DataFrame(list(data.items()), columns=['Date', 'DateValue'])\n",
     "df['Date'] = pd.to_datetime(df['Date'], infer_datetime_format=True)\n",
     "\n",
+    "# Change year of Datetime\n",
+    "import datetime\n",
+    "datetime.date(2016, 12, 25)\n",
+    "\n",
+    "df = sales[sales.trn_sls_dte.dt.year == 2015].copy()\n",
+    "df.trn_sls_dte = df_t.trn_sls_dte.map(lambda x: x.replace(year=2016))\n",
+    "\n",
     "# Create DataFrame From dict of ndarrays / lists\n",
     "\n",
     "d1 = {'one' : [1., 2., 3., 4.], 'two' : ['4', '3', '2', '1']}\n",
