set of lists/tuple

--- a/000PythonSnippet.ipynb
+++ b/000PythonSnippet.ipynb
@@ -1812,6 +1812,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{(1, 2, 3), (2, 4, 5)}"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Set of lists\n",
+    "# list is not hashable\n",
+    "# Use tuple instead\n",
+    "\n",
+    "l = [[1, 2, 3], [2, 4, 5], [1, 2, 3], [2, 4, 5]]\n",
+    "set(tuple(i) for i in l)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
