select by column index

--- a/000PythonSnippet.ipynb
+++ b/000PythonSnippet.ipynb
@@ -2959,6 +2959,9 @@
     "# iloc gets rows (or columns) at particular positions in the index\n",
     "df.iloc[0]\n",
     "\n",
+    "# Select by row index and column index\n",
+    "df.iloc[1:6, 1:-2]\n",
+    "\n",
     "# Add new column to DataFrame.\n",
     "# df.assign(columnname=Series/Scalar/Array)\n",
     "# Note: Need to assign again, otherwise it did not change the original one.\n",
