--- a/000PythonSnippet.ipynb
+++ b/000PythonSnippet.ipynb
@@ -2997,10 +2997,12 @@
     "# DataFrame Tanspose\n",
     "df.T\n",
     "\n",
-    "# Sum all columns for each row\n",
+    "# Sum for each row\n",
+    "# Results are one column\n",
     "df.sum(axis=1)\n",
     "\n",
-    "# Sum all rows for each column\n",
+    "# Sum for each column\n",
+    "# Results are one row\n",
     "df.sum(axis=0)\n",
     "\n",
     "# Delete DataFrame and Release Memory\n",
