--- a/000PythonSnippet.ipynb
+++ b/000PythonSnippet.ipynb
@@ -2616,7 +2616,10 @@
     "#  x = range(0,100)\n",
     "#  y = np.random.randn(100)\n",
     "#  ax = plt.plot(x, y)\n",
-    "#  py.iplot_mpl(fig)"
+    "#  py.iplot_mpl(fig)\n",
+    "\n",
+    "# This link shows how to delete plotly plots.\n",
+    "# https://plot.ly/~notebook_demo/98.embed"
    ]
   },
   {
@@ -3977,7 +3980,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
