--- a/000PythonSnippet.ipynb
+++ b/000PythonSnippet.ipynb
@@ -2619,7 +2619,25 @@
     "#  py.iplot_mpl(fig)\n",
     "\n",
     "# This link shows how to delete plotly plots.\n",
-    "# https://plot.ly/~notebook_demo/98.embed"
+    "# https://plot.ly/~notebook_demo/98.embed\n",
+    "import plotly.plotly as py\n",
+    "import requests\n",
+    "from requests.auth import HTTPBasicAuth\n",
+    "\n",
+    "username = 'justinnew'\n",
+    "api_key = 'YqtA9aVcQqaZeCHN1YrG'\n",
+    "\n",
+    "auth = HTTPBasicAuth(username, api_key)\n",
+    "headers = {'Plotly-Client-Platform': 'python'}\n",
+    "\n",
+    "# Get the plot id.\n",
+    "fid_permanent_delete = username+':287'\n",
+    "\n",
+    "# Move to trash\n",
+    "requests.post('https://api.plot.ly/v2/files/'+fid_permanent_delete+'/trash', auth=auth, headers=headers)\n",
+    "\n",
+    "# Permenantly delete\n",
+    "requests.delete('https://api.plot.ly/v2/files/'+fid_permanent_delete+'/permanent_delete', auth=auth, headers=headers)"
    ]
   },
   {
