apply is too slow

--- a/000PythonSnippet.ipynb
+++ b/000PythonSnippet.ipynb
@@ -3204,7 +3204,19 @@
     "\n",
     "t_df['New'] = t_df[['A', 'B']].apply(lambda x: scaleScore(x1 = x[0], x2 = x[1], avg = t_mean), axis = 1)\n",
     "\n",
-    "t_df"
+    "t_df\n",
+    "\n",
+    "if False:\n",
+    "    # Apply is too slow, use map whenever possible.\n",
+    "    # Give a weight for the lost_estimate\n",
+    "    user_lost_lag = df_lds_orders[['user_id', 'last_date', 'date', 'lost_estimate']].\\\n",
+    "        groupby(['user_id', 'last_date', 'date']).sum().reset_index()\n",
+    "\n",
+    "    user_lost_lag['lost_weight'] = user_lost_lag['lost_estimate'] * \\\n",
+    "        (29 - (user_lost_lag['last_date'] - user_lost_lag['date']).map(lambda x: x.days)) / 28\n",
+    "\n",
+    "    user_lost_lag = user_lost_lag[['user_id', 'lost_weight']].\\\n",
+    "        groupby('user_id').sum().reset_index().rename(columns={'lost_weight':'lost_lag'})"
    ]
   },
   {
