datetime to string

--- a/000PythonSnippet.ipynb
+++ b/000PythonSnippet.ipynb
@@ -3810,6 +3810,41 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Datetime to string, string to datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "date is 2005-06-01.\n",
+      "Month is 6.\n",
+      "2019-02-22 10:50:26\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "\n",
+    "# String to datetime\n",
+    "t = datetime.strptime('Jun 1 2005  1:33PM', '%b %d %Y %I:%M%p')\n",
+    "print('date is %s.'%(t.date()))\n",
+    "print('Month is %d.'%(t.month))\n",
+    "\n",
+    "# datetime to string\n",
+    "t2 = datetime.now().strftime(\"%Y-%m-%d %H:%M:%S\")\n",
+    "print(t2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
