datetime to string

--- a/000PythonSnippet.ipynb
+++ b/000PythonSnippet.ipynb
@@ -3833,6 +3833,9 @@
    "source": [
     "from datetime import datetime\n",
     "\n",
+    "# strptime is short for \"parse time\" \n",
+    "# strftime is for \"formatting time\".\n",
+    "\n",
     "# String to datetime\n",
     "t = datetime.strptime('Jun 1 2005  1:33PM', '%b %d %Y %I:%M%p')\n",
     "print('date is %s.'%(t.date()))\n",
