--- a/000PythonSnippet.ipynb
+++ b/000PythonSnippet.ipynb
@@ -3756,7 +3756,9 @@
     "ax.set_xlim([0,7])\n",
     "#ax.set_xlabel('x')\n",
     "#ax.set_ylabel('y')\n",
+    "# Set ticks location\n",
     "ax.set_xticks(x)\n",
+    "# Set ticks label\n",
     "ax.set_xticklabels(('G1','G2','G3','G4','G5','G6'))\n",
     "ax.set_title('Bar with error bar')\n",
     "\n",
