--- a/000PythonSnippet.ipynb
+++ b/000PythonSnippet.ipynb
@@ -5572,6 +5572,128 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Datetime Date Range"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>start</th>\n",
+       "      <th>end</th>\n",
+       "      <th>value</th>\n",
+       "      <th>days</th>\n",
+       "      <th>date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2019-07-11</td>\n",
+       "      <td>2019-07-13</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2019-07-11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2019-07-11</td>\n",
+       "      <td>2019-07-13</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2019-07-12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2019-07-11</td>\n",
+       "      <td>2019-07-13</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2019-07-13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2019-07-11</td>\n",
+       "      <td>2019-07-13</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2019-07-14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2019-07-12</td>\n",
+       "      <td>2019-07-12</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2019-07-12</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        start         end  value  days        date\n",
+       "0  2019-07-11  2019-07-13      5     2  2019-07-11\n",
+       "0  2019-07-11  2019-07-13      5     2  2019-07-12\n",
+       "0  2019-07-11  2019-07-13      5     2  2019-07-13\n",
+       "0  2019-07-11  2019-07-13      5     2  2019-07-14\n",
+       "1  2019-07-12  2019-07-12      5     0  2019-07-12"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from datetime import datetime, timedelta\n",
+    "\n",
+    "d = {'start':[datetime(2019,7,11).date() + timedelta(i) for i in range(2)],\n",
+    "     'end':[datetime(2019,7,12).date() + timedelta(i) for i in [np.random.randint(3) for i in range(2)]],\n",
+    "     'value':[np.random.randint(3, 6) for i in range(2)]}\n",
+    "df = pd.DataFrame(d)\n",
+    "\n",
+    "df['days'] = df['end'] - df['start']\n",
+    "df['days'] = df['days'].map(lambda x: x.days)\n",
+    "m = df['days'].max()\n",
+    "\n",
+    "df['date'] = df['start']\n",
+    "for i in range(m):\n",
+    "    temp = df[df['days'] >= i + 1].copy()\n",
+    "    temp['date'] = temp['date'].map(lambda x: x + timedelta(i + 1))\n",
+    "    df = pd.concat([df, temp])\n",
+    "    \n",
+    "df.sort_values(by=['start'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
