order by partition by

--- a/000PythonSnippet.ipynb
+++ b/000PythonSnippet.ipynb
@@ -4668,7 +4668,20 @@
     "df.sum(axis=0)\n",
     "\n",
     "# Delete DataFrame and Release Memory\n",
+    "\n",
     "del df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Order By and Partition By\n",
+    "import pandas as pd\n",
+    "\n",
+    "batches.sort_values(by=['shopper_id', 'batch_date']).groupby('shopper_id').tail(1)"
    ]
   },
   {
