order by partition by

--- a/000PythonSnippet.ipynb
+++ b/000PythonSnippet.ipynb
@@ -4681,7 +4681,13 @@
     "# Order By and Partition By\n",
     "import pandas as pd\n",
     "\n",
-    "batches.sort_values(by=['shopper_id', 'batch_date']).groupby('shopper_id').tail(1)"
+    "batches.sort_values(by=['shopper_id', 'batch_date']).groupby('shopper_id').tail(1)\n",
+    "\n",
+    "# Get days difference\n",
+    "# batches['day1']/['day2'] are datetime\n",
+    "batches['day1'] = pd.to_datetime(batches['day1'], infer_datetime_format=True)\n",
+    "batches['day1'] = batches['day1'].map(lambda x: x.date())\n",
+    "batches['day_diff'] = (batches['day2'] - batches['day1']).map(lambda x: x.days)"
    ]
   },
   {
