count date range

--- a/000PythonSnippet.ipynb
+++ b/000PythonSnippet.ipynb
@@ -5442,6 +5442,92 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>start</th>\n",
+       "      <th>end</th>\n",
+       "      <th>temp</th>\n",
+       "      <th>flag1</th>\n",
+       "      <th>flag2</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2019-03-09</td>\n",
+       "      <td>2019-03-14</td>\n",
+       "      <td>2019-03-10</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2019-03-11</td>\n",
+       "      <td>2019-03-14</td>\n",
+       "      <td>2019-03-10</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        start         end        temp  flag1  flag2  count\n",
+       "0  2019-03-09  2019-03-14  2019-03-10   True   True   True\n",
+       "1  2019-03-11  2019-03-14  2019-03-10  False   True  False"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Count date range \n",
+    "import pandas as pd\n",
+    "from datetime import datetime\n",
+    "\n",
+    "df = pd.DataFrame({'start':['2019-03-09', '2019-03-11'],\n",
+    "                  'end':['2019-03-14', '2019-03-14']})\n",
+    "df['start'] = pd.to_datetime(df['start'], format='%Y-%m-%d')\n",
+    "df['start'] = df['start'].map(lambda x: x.date())\n",
+    "df['end'] = pd.to_datetime(df['end'], format='%Y-%m-%d')\n",
+    "df['end'] = df['end'].map(lambda x: x.date())\n",
+    "df['temp'] = datetime(2019, 3, 10).date()\n",
+    "df['flag1'] = df['start'] <= df['temp']\n",
+    "df['flag2'] = df['end'] >= df['temp']\n",
+    "df['count'] = df['flag1'] & df['flag2']\n",
+    "df"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
